# whilework-app

./: .gitignore  README.md  docker-compose.yml
airflow/: Dockerfile  pyproject.toml
airflow/dags/: master_parser_dag.py
backend/: Dockerfile  conftest.py  pyproject.toml
backend/apps/accounts/: context_processors.py  models.py  services.py  tests.py
backend/apps/accounts/admin/: __init__.py  notification.py  slot_transaction.py  user.py
backend/apps/accounts/api/: endpoints.py  schemas.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_slottransaction_options_and_more.py  0003_alter_slottransaction_options_and_more.py  0004_user_groups_user_is_active_user_is_staff_and_more.py  0005_user_viewed_vacancies.py
backend/apps/accounts/web/: endpoints.py
backend/apps/cooperation/: admin.py  apps.py  models.py  services.py  tests.py
backend/apps/cooperation/api/: endpoints.py  schemas.py
backend/apps/cooperation/migrations/: 0001_initial.py  0002_message_name_alter_message_email.py
backend/apps/cooperation/web/: endpoints.py
backend/apps/inbox/: admin.py  apps.py  endpoints.py  models.py  schemas.py  services.py  tests.py  urls.py  views.py
backend/apps/inbox/migrations/: 0001_initial.py  0002_alter_parserrawmessage_id_and_more.py  0003_parserrawmessage_topic.py  0004_alter_parserrawmessage_id.py
backend/apps/navbar/: admin.py  apps.py  endpoints.py  models.py  services.py
backend/apps/navbar/api/: endpoints.py  schemas.py
backend/apps/navbar/migrations/: 0001_initial.py
backend/apps/navbar/web/: endpoints.py
backend/apps/sources/: admin.py  apps.py  endpoints.py  models.py  schemas.py  services.py  tests.py
backend/apps/sources/admin/: __init__.py  mixins.py  source_topic.py  sources.py
backend/apps/system/: admin.py  endpoints.py  models.py  schemas.py
backend/apps/vacancies/: apps.py  endpoints.py  exceptions.py  filter_services.py  models.py  schemas.py  services.py  tests.py  views.py
backend/core/: admin_mixins.py  log_filters.py  middleware.py  models.py  settings.py  sitemaps.py  urls.py
backend/core/api/: internal.py  web.py
backend/scripts/: entrypoint.sh  fill_db.py
backend/static/: robots.txt
backend/static/assets/: i18n.json
backend/templates/auth/: login_register.html
backend/templates/cooperation/: index.html
backend/templates/errors/: 404.html
backend/templates/faq/: index.html
backend/templates/includes/: _footer.html  _header.html  _modals.html
backend/templates/layouts/: base.html
backend/templates/profile/: detail.html
backend/templates/vacancies/: archived.html  detail.html  list.html
backend/tests/: factories.py
parser/: Dockerfile  pyproject.toml
parser/src/assets/: stop_markers.json
parser/src/core/: base_async_parser.py  config.py  platform_not_exist_error.py  schemas.py
(+68 files in other folders)
