[project]
name = "airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow (>=2.9.0,<3.0.0)",
    "apache-airflow-providers-docker (>=3.10.0,<4.0.0)",
    "apache-airflow-providers-http (>=4.10.0,<5.0.0)"
]

[tool.poetry]
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
