[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)"
]

[tool.poetry]
package-mode = false 

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-django = "^4.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
