[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ksiki",email = "j.kolyasha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "taskiq (>=0.12.4,<0.13.0)",
    "taskiq-aio-pika (>=0.6.0,<0.7.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "openai (>=2.37.0,<3.0.0)",
    "django-ninja (>=1.6.2,<2.0.0)"
]

[tool.poetry]
package-mode = false 

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-django = "^4.12.0"
factory-boy = "^3.3.3"
pytest-factoryboy = "^2.8.1"
pytest-mock = "^3.15.1"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_test.py"]
DJANGO_SETTINGS_MODULE = "core.settings"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
